--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "nextjs-starter",
+    "name": "automation-specialistchallenge",
     "version": "0.0.0",
     "private": true,
     "type": "module",
